# modeliero

./: README.md  cabal.project  modeliero.cabal
aeson-util/Modeliero/AesonUtil/: Values.hs
async-api/Modeliero/: AsyncApi.hs
codegen/Modeliero/Codegen/: Dependencies.hs  Imports.hs
codegen/Modeliero/Codegen/Dsls/: Code.hs  InModule.hs  Namespace.hs  Package.hs
codegen/Modeliero/Codegen/Templates/: FromJsonInstance.hs  ModelPackage.hs  ProductArbitraryInstance.hs  ReexportsModule.hs  RefinedArbitraryInstance.hs  SpecialInstance.hs  ToJsonInstance.hs
codegen/Modeliero/Codegen/Templates/ModelPackage/: Params.hs
codegen/Modeliero/Codegens/: Haskell.hs
codegen/Modeliero/Codegens/Haskell/: Dependencies.hs  Imports.hs  Params.hs
codegen/Modeliero/Codegens/Haskell/Dsls/: Code.hs  InModule.hs  Namespace.hs
codegen/Modeliero/Codegens/Haskell/Templates/: FromJsonInstance.hs  ModelModule.hs  ModelPackage.hs  ProductArbitraryInstance.hs  ProductDataTypeDeclaration.hs  ReexportsModule.hs  RefinedArbitraryInstance.hs  SpecialInstance.hs  ToJsonInstance.hs
codegen/Modeliero/Codegens/Haskell/Templates/ModelModule/Templates/: FromJsonInstance.hs  Product.hs  ProductArbitraryInstance.hs  ProductDataTypeDeclaration.hs  RefinedArbitraryInstance.hs  SpecialInstance.hs  ToJsonInstance.hs
codegen/Modeliero/Codegens/Haskell/Templates/ModelPackage/: Params.hs
codegen/Modeliero/Codegens/Haskell/Templates/ProductModelModule/Templates/: ArbitraryInstance.hs  ToJsonInstance.hs
codegen/Modeliero/Codegens/Haskell/Templates/RefinedModelModule/Templates/: ArbitraryInstance.hs  SpecialInstance.hs
codegens/Modeliero/Codegens/: Haskell.hs
codegens/Modeliero/Codegens/Haskell/: Dependencies.hs  Imports.hs  Params.hs  ParamsAlgebra.hs  SnippetTemplates.hs  Snippets.hs
codegens/Modeliero/Codegens/Haskell/CompilersOf/: IsLiteral.hs  TypeSig.hs
codegens/Modeliero/Codegens/Haskell/Dsls/: Code.hs  InModule.hs  Package.hs
codegens/Modeliero/Codegens/Haskell/FileTemplates/: CabalProject.hs
codegens/Modeliero/Codegens/Haskell/IntegratedTemplates/: ProductModelModule.hs
codegens/Modeliero/Codegens/Haskell/ModuleTemplates/: EnumModel.hs  ProductModel.hs  ProxyModel.hs  Reexports.hs  RefinedModel.hs  SumModel.hs  TextModel.hs
codegens/Modeliero/Codegens/Haskell/ModuleTemplates/ProductModel/: SnippetTemplates.hs
codegens/Modeliero/Codegens/Haskell/ModuleTemplates/ProductModel/SnippetTemplates/: AnonymizableInstance.hs  DataTypeDeclaration.hs  DataTypeDeclarationField.hs  HashableInstance.hs  ToJsonInstance.hs  ToJsonInstanceFieldExp.hs
codegens/Modeliero/Codegens/Haskell/ModuleTemplates/ProductModel/Templates/: ArbitraryInstance.hs  DataTypeDeclaration.hs  FromJsonInstance.hs  ProductModelModule.hs  ToJsonInstance.hs
codegens/Modeliero/Codegens/Haskell/Preludes/: SnippetTemplate.hs
codegens/Modeliero/Codegens/Haskell/SnippetTemplates/: AdtHashableInstance.hs  AdtHashableInstanceConstructor.hs  CommaSeparated.hs  DataDeclaration.hs  DataDeclarationVariant.hs  DataType.hs  DerivingVia.hs  EnumArbitraryInstance.hs  EnumLiteralInstance.hs  ForcedProxyAnonymizableInstance.hs  NewtypeDeclaration.hs  ParensList.hs  PrefixHaddock.hs  ProductAnonymizableInstance.hs  RefinedTextAnonymizableInstance.hs  RefinedTextArbitraryInstance.hs  RefinedTextForcedAnonymizableInstance.hs  RefinedTextLiteralInstance.hs  StringLiteral.hs  SumToJsonInstance.hs  SumToJsonInstanceConstructor.hs
codegens/Modeliero/Codegens/Haskell/TemplateAdapters/: ProductModelModule.hs
codegens/Modeliero/Codegens/Haskell/Templates/: ProductModelModule.hs  ProxyModelModule.hs  RefinedModelModule.hs  SumModelModule.hs  WrapperModelModule.hs
fixtures/: asyncapi-1.yaml
hspec/: ModelieroSpec.hs
hspec/Modeliero/: AsyncApiSpec.hs
hspec/Modeliero/Codegen/ExtrasFor/: Hspec.hs
hspec/Modeliero/Codegen/Templates/: FromJsonInstanceSpec.hs  ProductArbitraryInstanceSpec.hs  ReexportsModuleSpec.hs  RefinedArbitraryInstanceSpec.hs  SpecialInstanceSpec.hs  ToJsonInstanceSpec.hs
hspec/Modeliero/Codegens/: HaskellSpec.hs
hspec/Modeliero/Codegens/Haskell/ExtrasFor/: Hspec.hs
hspec/Modeliero/Codegens/Haskell/ModuleTemplates/: ReexportsSpec.hs
hspec/Modeliero/Codegens/Haskell/Templates/: FromJsonInstanceSpec.hs  ModelModuleSpec.hs  ProductArbitraryInstanceSpec.hs  ProductDataTypeDeclarationSpec.hs  ProductModelModuleSpec.hs  ReexportsModuleSpec.hs  RefinedArbitraryInstanceSpec.hs  SpecialInstanceSpec.hs  ToJsonInstanceSpec.hs
hspec/Modeliero/ExtrasFor/: Hspec.hs
hspec/Modeliero/Preludes/: Spec.hs
hspec/Modeliero/Sources/: AsyncApiSpec.hs
hspec/Modeliero/Sources/AsyncApi/: EmailServiceSpec.hs  ValidInvalidFixturesSpec.hs
hspec/Modeliero/Sources/AsyncApi/EmailServiceSpec/fixtures/: email-service.yaml
hspec/Modeliero/Sources/AsyncApi/TestModel/Preludes/: Spec.hs
hspec/Modeliero/Sources/AsyncApiSpec/fixtures/invalid/: ref-to-missing-component.yaml  unsupported-format.yaml
hspec/Modeliero/Sources/AsyncApiSpec/fixtures/valid/: network-address.yaml
hspec/Modeliero/Templates/: FromJsonInstanceSpec.hs  ProductArbitraryInstanceSpec.hs  RefinedArbitraryInstanceSpec.hs  SpecialInstanceSpec.hs  ToJsonInstanceSpec.hs
hspec/Modeliero/Util/: Specs.hs
hspec/ModelieroSpec/fixtures/async-api/: array-in-array.yaml  array-over-array.yaml  boolean.yaml  email-service.yaml  enum.yaml  integer.yaml  number.yaml  product.yaml  sum.yaml
modeliero/: Main.hs
sources/Modeliero/Sources/: AsyncApi.hs
sources/Modeliero/Sources/AsyncApi/: LegacyParsers.hs
sources/Modeliero/Sources/AsyncApi/ParserOf/: AsyncApi.hs  Components.hs  EnumVariant.hs  EnumVariants.hs  ExtendedComponents.hs  InlineSchema.hs  OneOf.hs  OneOfItemSchema.hs  OutlineSchema.hs  Properties.hs  ReferencedSchema.hs  Schema.hs
sources/Modeliero/Sources/AsyncApi/Parsers/: PropertySchema.hs  ReferencedSchema.hs  SchemaProperties.hs  SchemaReferencedSchema.hs  SumOneOf.hs  SumSchema.hs  SumVariantSchema.hs  TypeDeclarationSchema.hs  TypeDeclarationsComponents.hs  ValueTypeSchema.hs
sources/Modeliero/Sources/AsyncApi/Preludes/: Parser.hs
(+69 files in other folders)
