cabal-version: 3.4
name: modeliero
version: 0
synopsis:
stability: Experimental
homepage: https://github.com/nikita-volkov/modeliero
bug-reports: https://github.com/nikita-volkov/modeliero/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2024, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/modeliero.git

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library codegens
  import: base
  hs-source-dirs: codegens
  exposed-modules:
    Modeliero.Codegens.Haskell
    Modeliero.Codegens.Haskell.Dependencies
    Modeliero.Codegens.Haskell.Dsls.Code
    Modeliero.Codegens.Haskell.Dsls.InModule
    Modeliero.Codegens.Haskell.Dsls.Namespace
    Modeliero.Codegens.Haskell.Dsls.Package
    Modeliero.Codegens.Haskell.Imports
    Modeliero.Codegens.Haskell.Params
    Modeliero.Codegens.Haskell.Templates.ProductModelModule
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ArbitraryInstance
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.DataTypeDeclaration
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.FromJsonInstance
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ProductModelModule
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ToJsonInstance
    Modeliero.Codegens.Haskell.Templates.ReexportsModule
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ArbitraryInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.DataTypeDeclaration
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.FromJsonInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.SpecialInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ToJsonInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.DataTypeDeclaration

  build-depends:
    coalmine,
    codegen-kit-haskell-package,
    codegen-kit-legacy,
    containers,
    text,

test-suite hspec
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: hspec
  main-is: Main.hs
  other-modules:
    Modeliero.Codegens.Haskell.ExtrasFor.Hspec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ArbitraryInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.DataTypeDeclarationSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.FromJsonInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ProductModelModuleSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ToJsonInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ReexportsModuleSpec
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ArbitraryInstanceSpec
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.SpecialInstanceSpec
    Modeliero.Codegens.HaskellSpec

  build-tool-depends:
    hspec-discover:hspec-discover >=2 && <3

  build-depends:
    coalmine,
    containers,
    hspec,
    hspec-expectations,
    modeliero:codegens,
    text,
