cabal-version: 3.4
name: modeliero
version: 0
synopsis:
stability: Experimental
homepage: https://github.com/nikita-volkov/modeliero
bug-reports: https://github.com/nikita-volkov/modeliero/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2024, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  **/*.yaml

source-repository head
  type: git
  location: git://github.com/nikita-volkov/modeliero.git

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library sources
  import: base
  hs-source-dirs: sources
  exposed-modules:
    Modeliero.Sources.AsyncApi

  other-modules:
    Modeliero.Sources.AsyncApi.LegacyParsers
    Modeliero.Sources.AsyncApi.ParserOf.AsyncApi
    Modeliero.Sources.AsyncApi.ParserOf.ExtendedComponents
    Modeliero.Sources.AsyncApi.ParserOf.InlineSchema
    Modeliero.Sources.AsyncApi.ParserOf.OutlineSchema
    Modeliero.Sources.AsyncApi.Parsers.SchemaReferencedSchema
    Modeliero.Sources.AsyncApi.Parsers.SumOneOf
    Modeliero.Sources.AsyncApi.Parsers.SumVariantSchema
    Modeliero.Sources.AsyncApi.Preludes.Parser

  build-depends:
    cases,
    coalmine,
    insert-ordered-containers,
    modeliero:aeson-util,
    modeliero:async-api,
    modeliero:codegens,
    openapi3,
    unordered-containers,

library async-api
  import: base
  hs-source-dirs: async-api
  exposed-modules:
    Modeliero.AsyncApi

  build-depends:
    aeson,
    aeson-value-parser,
    coalmine,
    openapi3,
    yaml,

library aeson-util
  import: base
  hs-source-dirs: aeson-util
  exposed-modules:
    Modeliero.AesonUtil.Values

  build-depends:
    aeson,
    coalmine,

library codegens
  import: base
  hs-source-dirs: codegens
  exposed-modules:
    Modeliero.Codegens.Haskell
    Modeliero.Codegens.Haskell.Dependencies
    Modeliero.Codegens.Haskell.Dsls.Code
    Modeliero.Codegens.Haskell.Dsls.InModule
    Modeliero.Codegens.Haskell.Dsls.Namespace
    Modeliero.Codegens.Haskell.Dsls.Package
    Modeliero.Codegens.Haskell.Imports
    Modeliero.Codegens.Haskell.Params
    Modeliero.Codegens.Haskell.Snippets
    Modeliero.Codegens.Haskell.Templates.ProductModelModule
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ArbitraryInstance
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.DataTypeDeclaration
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.FromJsonInstance
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ProductModelModule
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ToJsonInstance
    Modeliero.Codegens.Haskell.Templates.ReexportsModule
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ArbitraryInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.DataTypeDeclaration
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.FromJsonInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.SpecialInstance
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ToJsonInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.AnonymizableInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.ArbitraryInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.DataTypeDeclaration
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.FromJsonInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.HashableInstance
    Modeliero.Codegens.Haskell.Templates.SumModelModule.Templates.ToJsonInstance

  build-depends:
    base,
    coalmine,
    codegen-kit-haskell-package,
    codegen-kit-legacy,
    containers,
    text,

test-suite hspec
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: hspec
  main-is: Main.hs
  other-modules:
    Modeliero.AsyncApiSpec
    Modeliero.Codegens.Haskell.ExtrasFor.Hspec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ArbitraryInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.DataTypeDeclarationSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.FromJsonInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ProductModelModuleSpec
    Modeliero.Codegens.Haskell.Templates.ProductModelModule.Templates.ToJsonInstanceSpec
    Modeliero.Codegens.Haskell.Templates.ReexportsModuleSpec
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.ArbitraryInstanceSpec
    Modeliero.Codegens.Haskell.Templates.RefinedModelModule.Templates.SpecialInstanceSpec
    Modeliero.Codegens.HaskellSpec
    Modeliero.Preludes.Spec
    Modeliero.Sources.AsyncApi.EmailServiceSpec
    Modeliero.Sources.AsyncApi.ValidInvalidFixturesSpec
    Modeliero.Sources.AsyncApiSpec

  build-tool-depends:
    hspec-discover:hspec-discover >=2 && <3

  build-depends:
    coalmine,
    containers,
    directory,
    hspec,
    hspec-expectations,
    modeliero:async-api,
    modeliero:codegens,
    modeliero:sources,
    text,
